Made web site more general and removed journal pages.

--- a/src/main/webapp/projects/biography/final.html
+++ b/src/main/webapp/projects/biography/final.html
@@ -2,7 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
-      <title>Guy Turner - Visual Biography Beta</title>
+      <title>Code by Guy - Visual Biography Final</title>
       
       <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 
