--- a/src/main/webapp/projects/homepage/m1.html
+++ b/src/main/webapp/projects/homepage/m1.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>Guy Turner - Homepage Milestone #1</title>
+    <title>Code by Guy - Homepage Milestone 1</title>
   </head>
 
   <body>
