--- a/src/main/webapp/projects/homepage/m2.html
+++ b/src/main/webapp/projects/homepage/m2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Guy Turner - T284 Homepage</title>
+	<title>Code by Guy - T284 Homepage Milestone 2</title>
 	<meta name="description" content="Guy Turner's T284 page hosts assignments completed 
 	      for Indiana University's Telecommunications T-284 class on web design and 
 	      development." />
