--- a/src/main/webapp/projects/resume/m1.html
+++ b/src/main/webapp/projects/resume/m1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Guy Turner - Text Resume</title>
+    <title>Code by Guy - HTML 5 Resume Milestone 1</title>
   </head>
 
   <body>
