--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Guy Turner - T284 Homepage</title>
-	<meta name="description" content="Guy Turner's T284 page hosts assignments completed 
-	      for Indiana University's Telecommunications T-284 class on web design and 
-	      development." />
+	<title>Code by Guy: Home</title>
+	<meta name="description" content="A project showcase for Guy Turner, software developer." />
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/override.css">
@@ -36,14 +34,10 @@
     				<ul class="dropdown-menu">
       					<li><a href="projects/resume/">project ( resume );</a></li>
       					<li><a href="projects/biography/">project ( biography );</a></li>
-                                   <li><a href="projects/homepage/">project ( homepage );</a></li>
-					<li><a href="journals/">journals ( 10 );</a></li>
+                        <li><a href="projects/homepage/">project ( homepage );</a></li>
     				</ul>
   			    </div>
 			</div>
-
-                     <!-- Tagline -->
-			<a class="brand" href="index.html">// hello_world</a>
 
                      <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
@@ -51,25 +45,6 @@
                              <a href="projects/resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
                              <a href="projects/biography/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( biography );</button></a>
                              <a href="projects/homepage/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( homepage );</button></a>
-
-                             <div class="btn-group">
-                                 <button type="button" class="btn btn-default btn-menu drop-nav dropdown-toggle" data-toggle="dropdown">
-                                     journals ( 10 );
-                                     <span class="caret"></span>
-                                 </button>
-                                 <ul class="dropdown-menu nav-dropdown-menu">
-                                     <li><a href="journals/journal1.html">1. elvis</a></li>
-                                     <li><a href="journals/journal2.html">2. detroit</a></li>
-                                     <li><a href="journals/journal3.html">3. firefox</a></li>
-                                     <li><a href="journals/journal4.html">4. babe ruth</a></li>
-                                     <li><a href="journals/journal5.html">5. fox news</a></li>
-                                     <li><a href="journals/journal6.html">6. war on drugs</a></li>
-                                     <li><a href="journals/journal7.html">7. eris</a></li>
-                                     <li><a href="journals/journal8.html">8. statue of liberty</a></li>
-                                     <li><a href="journals/journal9.html">9. king tut</a></li>
-                                     <li><a href="journals/journal10.html">10. highways</a></li>
-                                 </ul>
-                             </div>
                          </div>
 			</div> <!-- Nav-Collapse -->
   		  </div> <!-- Navbar-Inner -->
@@ -78,11 +53,17 @@
 	<div class="container">
 
 		<div class="hero-unit">
-			<h1>hello(t_284) {</h1>
+			<h1>hello(world) {</h1>
 				<div class="txt">
-					<span class="hero-txt">This site hosts all assignments completed for Indiana University's Telecom T-284 course on web design and development.</span>
+					<span class="hero-txt">
+					A project showcase for Guy Turner, software developer.
+					<br>
+					Currently devoted only to projects completed in a single IU Bloomington course on Web design.
+					<br>
+					(more to come)
+					</span>
 				</div>
-			<h1>} </h1>
+			<h1>}</h1>
 		</div>
 
 		<div class="panel panel-default">
