--- a/src/main/webapp/projects/biography/index.html
+++ b/src/main/webapp/projects/biography/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Guy Turner - Visual Biography Project</title>
-	<meta name="description" content="Guy Turner's Indiana University T284 page for the 'Visual Biography' project." />
+	<title>Code by Guy - Visual Biography Project</title>
+	<meta name="description" content="Guy Turner's project showcase page for the 'Visual Biography' project." />
 
 	<link rel="stylesheet" href="../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../css/override.css">
@@ -34,14 +34,10 @@
     				<ul class="dropdown-menu">
       					<li><a href="../resume/">project ( resume );</a></li>
       					<li><a href="index.html">project ( biography );</a></li>
-                                   <li><a href="../homepage/">project ( homepage );</a></li>
-					<li><a href="../../journals/">journals ( 10 );</a></li>
+                        <li><a href="../homepage/">project ( homepage );</a></li>
     				</ul>
   			    </div>
 			</div>
-
-                     <!-- Tagline -->
-			<a class="brand" href="../../index.html">// hello_world</a>
 
                      <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
@@ -49,25 +45,6 @@
                              <a href="../resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
                              <a href="index.html"><button type="button" class="btn btn-default btn-menu-active btn-nav">project ( biography );</button></a>
                              <a href="../homepage/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( homepage );</button></a>
-
-                             <div class="btn-group">
-                                 <button type="button" class="btn btn-default btn-menu drop-nav dropdown-toggle" data-toggle="dropdown">
-                                     journals ( 10 );
-                                     <span class="caret"></span>
-                                 </button>
-                                 <ul class="dropdown-menu nav-dropdown-menu">
-                                     <li><a href="../../journals/journal1.html">1. elvis</a></li>
-                                     <li><a href="../../journals/journal2.html">2. detroit</a></li>
-                                     <li><a href="../../journals/journal3.html">3. firefox</a></li>
-                                     <li><a href="../../journals/journal4.html">4. babe ruth</a></li>
-                                     <li><a href="../../journals/journal5.html">5. fox news</a></li>
-                                     <li><a href="../../journals/journal6.html">6. war on drugs</a></li>
-                                     <li><a href="../../journals/journal7.html">7. eris</a></li>
-                                     <li><a href="../../journals/journal8.html">8. statue of liberty</a></li>
-                                     <li><a href="../../journals/journal9.html">9. king tut</a></li>
-                                     <li><a href="../../journals/journal10.html">10. highways</a></li>
-                                 </ul>
-                             </div>
                          </div>
 			</div> <!-- Nav-Collapse -->
   		  </div> <!-- Navbar-Inner -->
@@ -85,47 +62,38 @@
 		<div class="hero-unit small">
 			<h1 class="small-head">project(biography) {</h1>
 				<div class="txt">
-					<span class="hero-txt">A biography designed to portray the life of Red Hot Chili Peppers frontman Anthony Kiedis visually. The page represents a hypothetical top-down view of the singer's own desk.</span>
+					<span class="hero-txt">
+					This was a Web design project for a telecommunications course at Indiana University.
+					<br><br>
+					A biography designed to portray the life of Red Hot Chili Peppers frontman Anthony Kiedis visually. The page represents a hypothetical top-down view of the singer's own desk.
+					</span>
 				</div>
 			<h1 class="small-head">} </h1>
 		</div>
 
 		<div class="panel panel-default">
 			<div class="panel-heading"><h3>Milestones</h3></div>
-  			    <div class="panel-body" style="text-align: center">
-                             <div class="row">
-			 		<div class="span5 offset1 white-box">
+  			<div class="panel-body" style="text-align: center">
+				<div class="row">
+					<div class="span5 offset1 white-box">
 						<h2 class="proj-head">Milestone #1</h2>
 						<p class="project"><a href="m1.html"><img class="project-thumb" src="img/biography-1-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Biography Text</p>
-					</div>
-	   
-			 		<div class="span5 white-box">
-						<h2 class="proj-head">Milestone #2</h2>
-						<p class="project"><a href="m2.html"><img class="project-thumb" src="img/biography-2-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Images and Citations</p>
-					</div>
-				</div>
-    				<div class="row">
-			 		<div class="span5 offset1 white-box">
-						<h2 class="proj-head">Milestone #3</h2>
-						<p class="project"><a href="m3.html"><img class="project-thumb" src="img/biography-3-thumb.jpg" style="height: 150px"/></a></p>
 						<p class="project">First Draft</p>
 					</div>
 	   
-			 		<div class="span5 white-box">
-						<h2 class="proj-head">Milestone #4</h2>
-						<p class="project"><a href="m4.html"><img class="project-thumb" src="img/biography-4-thumb.jpg" style="height: 150px"/></a></p>
+					<div class="span5 white-box">
+						<h2 class="proj-head">Milestone #2</h2>
+						<p class="project"><a href="m2.html"><img class="project-thumb" src="img/biography-2-thumb.jpg" style="height: 150px"/></a></p>
 						<p class="project">Beta</p>
 					</div>
 				</div>
-    				<div class="row">
-			 		<div class="span10 offset1 white-box">
+   				<div class="row">
+					<div class="span10 offset1 white-box">
 						<h2 class="proj-head">Final</h2>
-						<p class="project"><a href="final.html"><img class="project-thumb" src="img/biography-5-thumb.jpg" style="height: 175px"/></a></p>
+						<p class="project"><a href="final.html"><img class="project-thumb" src="img/biography-3-thumb.jpg" style="height: 175px"/></a></p>
 					</div>
 				</div>
-  			</div>
+			</div>
 		</div>
 	 </div>
 
