--- a/src/main/webapp/projects/homepage/index.html
+++ b/src/main/webapp/projects/homepage/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Guy Turner - Homepage Project</title>
-	<meta name="description" content="Guy Turner's Indiana University T284 page for the 'Homepage' project." />
+	<title>Code by Guy - Homepage Project</title>
+	<meta name="description" content="Guy Turner's project showcase for the 'Homepage' project." />
 
 	<link rel="stylesheet" href="../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../css/override.css">
@@ -34,14 +34,10 @@
     				<ul class="dropdown-menu">
       					<li><a href="../resume/">project ( resume );</a></li>
       					<li><a href="../biography/">project ( biography );</a></li>
-                                   <li><a href="index.html">project ( homepage );</a></li>
-					<li><a href="../../journals/">journals ( 10 );</a></li>
+                        <li><a href="index.html">project ( homepage );</a></li>
     				</ul>
   			    </div>
 			</div>
-
-                     <!-- Tagline -->
-			<a class="brand" href="../../index.html">// hello_world</a>
 
                      <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
@@ -49,25 +45,6 @@
                              <a href="../resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
                              <a href="../biography/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( biography );</button></a>
                              <a href="index.html"><button type="button" class="btn btn-default btn-menu-active btn-nav">project ( homepage );</button></a>
-
-                             <div class="btn-group">
-                                 <button type="button" class="btn btn-default btn-menu drop-nav dropdown-toggle" data-toggle="dropdown">
-                                     journals ( 10 );
-                                     <span class="caret"></span>
-                                 </button>
-                                 <ul class="dropdown-menu nav-dropdown-menu">
-                                     <li><a href="../../journals/journal1.html">1. elvis</a></li>
-                                     <li><a href="../../journals/journal2.html">2. detroit</a></li>
-                                     <li><a href="../../journals/journal3.html">3. firefox</a></li>
-                                     <li><a href="../../journals/journal4.html">4. babe ruth</a></li>
-                                     <li><a href="../../journals/journal5.html">5. fox news</a></li>
-                                     <li><a href="../../journals/journal6.html">6. war on drugs</a></li>
-                                     <li><a href="../../journals/journal7.html">7. eris</a></li>
-                                     <li><a href="../../journals/journal8.html">8. statue of liberty</a></li>
-                                     <li><a href="../../journals/journal9.html">9. king tut</a></li>
-                                     <li><a href="../../journals/journal10.html">10. highways</a></li>
-                                 </ul>
-                             </div>
                          </div>
 			</div> <!-- Nav-Collapse -->
   		  </div> <!-- Navbar-Inner -->
@@ -85,7 +62,11 @@
 		<div class="hero-unit small">
 			<h1 class="small-head">project(homepage) {</h1>
 				<div class="txt">
-					<span class="hero-txt">The homepage to my T284 web site. This page is intended to be a central portal to all of my T284 work and represent me as an individual. It was built with Twitter Bootstrap.</span>
+					<span class="hero-txt">
+					This was a Web design project for a telecommunications course at Indiana University.
+					<br><br>
+					The homepage to my T284 (IU course number) Web site. This page was intended to be a central portal to all of my T284 work and represent me as an individual. It was built with Twitter Bootstrap. I have since rebuilt the Web site as a general resume.
+					</span>
 				</div>
 			<h1 class="small-head">} </h1>
 		</div>
