--- a/src/main/webapp/projects/index.html
+++ b/src/main/webapp/projects/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Guy Turner - Projects</title>
-	<meta name="description" content="Guy Turner's Indiana University T284 project portal." />
+	<title>Code by Guy - Projects</title>
+	<meta name="description" content="Project portal for Guy Turner's project showcase." />
 
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/override.css">
@@ -34,14 +34,10 @@
     				<ul class="dropdown-menu">
       					<li><a href="resume/">project ( resume );</a></li>
       					<li><a href="biography/">project ( biography );</a></li>
-                                   <li><a href="homepage/">project ( homepage );</a></li>
-					<li><a href="../journals/">journals ( 10 );</a></li>
+                        <li><a href="homepage/">project ( homepage );</a></li>
     				</ul>
   			    </div>
 			</div>
-
-                     <!-- Tagline -->
-			<a class="brand" href="../index.html">// hello_world</a>
 
                      <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
@@ -49,25 +45,6 @@
                              <a href="resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
                              <a href="biography/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( biography );</button></a>
                              <a href="homepage/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( homepage );</button></a>
-
-                             <div class="btn-group">
-                                 <button type="button" class="btn btn-default btn-menu drop-nav dropdown-toggle" data-toggle="dropdown">
-                                     journals ( 10 );
-                                     <span class="caret"></span>
-                                 </button>
-                                 <ul class="dropdown-menu nav-dropdown-menu">
-                                     <li><a href="../journals/journal1.html">1. elvis</a></li>
-                                     <li><a href="../journals/journal2.html">2. detroit</a></li>
-                                     <li><a href="../journals/journal3.html">3. firefox</a></li>
-                                     <li><a href="../journals/journal4.html">4. babe ruth</a></li>
-                                     <li><a href="../journals/journal5.html">5. fox news</a></li>
-                                     <li><a href="../journals/journal6.html">6. war on drugs</a></li>
-                                     <li><a href="../journals/journal7.html">7. eris</a></li>
-                                     <li><a href="../journals/journal8.html">8. statue of liberty</a></li>
-                                     <li><a href="../journals/journal9.html">9. king tut</a></li>
-                                     <li><a href="../journals/journal10.html">10. highways</a></li>
-                                 </ul>
-                             </div>
                          </div>
 			</div> <!-- Nav-Collapse -->
   		  </div> <!-- Navbar-Inner -->
