--- a/src/main/webapp/projects/resume/css-beta.html
+++ b/src/main/webapp/projects/resume/css-beta.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Guy Turner - HTML 5 Resume</title>
+    <title>Code by Guy - HTML 5 Resume Beta</title>
 	
 	<style>
 	
