--- a/src/main/webapp/projects/resume/m2.html
+++ b/src/main/webapp/projects/resume/m2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Guy Turner - HTML 5 Resume</title>
+    <title>Code by Guy - HTML 5 Resume Milestone 2</title>
   </head>
 
   <body style="background-color:#E8E8E8">
