Removed several pages from site map.

--- a/src/main/webapp/sitemap.html
+++ b/src/main/webapp/sitemap.html
@@ -72,10 +72,8 @@
                 <p class="project" style="padding-left:2em"><a href="projects/resume/m1.html">Milestone #1</a></p>
                 <p class="project" style="padding-left:2em"><a href="projects/resume/m2.html">Milestone #2</a></p>
                 <p class="project" style="padding-left:2em"><a href="projects/resume/m3.html">Milestone #3</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/css-beta.html">CSS Beta</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/html-beta.html">HTML Beta</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/css-final.html">CSS Final</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/html-final.html">HTML Final</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/resume/css-beta.html">Milestone #4</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/resume/css-final.html">Final</a></p>
             </div>
                
             <div class="span4 white-box">
@@ -83,8 +81,6 @@
                 <p class="project" style="padding-left:1em"><a href="projects/biography/">Visual Biography</a></p>
                 <p class="project" style="padding-left:2em"><a href="projects/biography/m1.html">Milestone #1</a></p>
                 <p class="project" style="padding-left:2em"><a href="projects/biography/m2.html">Milestone #2</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/biography/m3.html">Milestone #3</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/biography/m4.html">Milestone #4</a></p>
                 <p class="project" style="padding-left:2em"><a href="projects/biography/final.html">Final</a></p>                    
             </div>
 
