Added categories for all project types.

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -32,22 +32,53 @@
       					<span class="caret"></span>
     				</button>
     				<ul class="dropdown-menu">
-      					<li><a href="projects/resume/">project ( resume );</a></li>
-      					<li><a href="projects/biography/">project ( biography );</a></li>
-                        <li><a href="projects/homepage/">project ( homepage );</a></li>
+      					<li><a href="projects/apps/">category ( apps );</a></li>
+      					<li><a href="projects/games/">category ( games );</a></li>
+						<li><a href="projects/web/">category ( web );</a></li>
+                        <li><a href="projects/art/">category ( art );</a></li>
     				</ul>
   			    </div>
 			</div>
 
-                     <!-- Visible on Large Displays Only -->
+            <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
-                         <div class="btn-group">
-                             <a href="projects/resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
-                             <a href="projects/biography/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( biography );</button></a>
-                             <a href="projects/homepage/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( homepage );</button></a>
-                         </div>
+                <div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav btn-first dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/apps/">category ( apps );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/games/">category ( games );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/web/">category ( web );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+      					<li><a href="projects/web/biography/">project ( biography );</a></li>
+      					<li><a href="projects/web/homepage/">project ( homepage );</a></li>
+                        <li><a href="projects/web/resume/">project ( resume );</a></li>
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/art/">category ( art );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
 			</div> <!-- Nav-Collapse -->
-  		  </div> <!-- Navbar-Inner -->
+  		</div> <!-- Navbar-Inner -->
 	</div>
 
 	<div class="container">
