--- a/src/main/webapp/sitemap.html
+++ b/src/main/webapp/sitemap.html
@@ -32,22 +32,53 @@
       					<span class="caret"></span>
     				</button>
     				<ul class="dropdown-menu">
-      					<li><a href="projects/resume/">project ( resume );</a></li>
-      					<li><a href="projects/biography/">project ( biography );</a></li>
-                        <li><a href="projects/homepage/">project ( homepage );</a></li>
+      					<li><a href="projects/apps/">category ( apps );</a></li>
+      					<li><a href="projects/games/">category ( games );</a></li>
+						<li><a href="projects/web/">category ( web );</a></li>
+                        <li><a href="projects/art/">category ( art );</a></li>
     				</ul>
   			    </div>
 			</div>
 
             <!-- Visible on Large Displays Only -->
 			<div class="nav-collapse">
-                         <div class="btn-group">
-                             <a href="projects/resume/"><button type="button" class="btn btn-default btn-menu btn-nav btn-first">project ( resume );</button></a>
-                             <a href="projects/biography/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( biography );</button></a>
-                             <a href="projects/homepage/"><button type="button" class="btn btn-default btn-menu btn-nav">project ( homepage );</button></a>
-                         </div>
+                <div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav btn-first dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/apps/">category ( apps );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/games/">category ( games );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/web/">category ( web );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+      					<li><a href="projects/web/biography/">project ( biography );</a></li>
+      					<li><a href="projects/web/homepage/">project ( homepage );</a></li>
+                        <li><a href="projects/web/resume/">project ( resume );</a></li>
+    				</ul>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="projects/art/">category ( art );</a>
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+    				</ul>
+				</div>
 			</div> <!-- Nav-Collapse -->
-  		  </div> <!-- Navbar-Inner -->
+  		</div> <!-- Navbar-Inner -->
 	</div>
 
 	<div class="container">
@@ -58,7 +89,7 @@
             </ol>
         </div>
         <div class="row">
-            <div class="span10 offset1 white-box">
+            <div class="span10 offset1 white-box" style="height: 150px">
                 <p class="project"><a href="index.html">Home</a></p>
                 <p class="project" style="padding-left:1em"><a href="about.html">About Me</a></p>
                 <p class="project" style="padding-left:1em"><a href="sitemap.html">Site Map</a></p>
@@ -66,32 +97,38 @@
 		</div>
 
         <div class="row">
-            <div class="span3 offset1 white-box">
-                <p class="project"><a href="projects/">Projects</a></p>
-                <p class="project" style="padding-left:1em"><a href="projects/resume/">Resume</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/m1.html">Milestone #1</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/m2.html">Milestone #2</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/m3.html">Milestone #3</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/css-beta.html">Milestone #4</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/resume/css-final.html">Final</a></p>
+            <div class="span5 offset1 white-box" style="height: 600px">
+                <p class="project"><a href="projects/apps/">Apps</a></p>
             </div>
                
-            <div class="span4 white-box">
-                <p class="project"><a href="projects/">Projects</a></p>
-                <p class="project" style="padding-left:1em"><a href="projects/biography/">Visual Biography</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/biography/m1.html">Milestone #1</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/biography/m2.html">Milestone #2</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/biography/final.html">Final</a></p>                    
+            <div class="span5 white-box" style="height: 600px">
+                <p class="project"><a href="projects/games/">Games</a></p>            
             </div>
-
-			<div class="span3 white-box">
-                <p class="project"><a href="projects/">Projects</a></p>
-                <p class="project" style="padding-left:1em"><a href="projects/homepage/">Homepage</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/homepage/m1.html">Milestone #1</a></p>
-                <p class="project" style="padding-left:2em"><a href="projects/homepage/m2.html">Milestone #2</a></p>    
-                <p class="project" style="padding-left:2em"><a href="projects/homepage/m3.html">Milestone #3</a></p>  
-                <p class="project" style="padding-left:2em"><a href="projects/homepage/m4.html">Milestone #4</a></p>  
-                <p class="project" style="padding-left:2em"><a href="projects/homepage/final.html">Final</a></p>                  
+		</div>
+		
+		<div class="row">
+			<div class="span5 offset1 white-box" style="height: 600px">
+                <p class="project"><a href="projects/web/">Web</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/web/biography/">Visual Biography</a></p>
+				<p class="project" style="padding-left:2em"><a href="projects/web/biography/m1.html">Milestone #1</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/biography/m2.html">Milestone #2</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/biography/final.html">Final</a></p> 
+                <p class="project" style="padding-left:1em"><a href="projects/web/homepage/">Homepage</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/homepage/m1.html">Milestone #1</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/homepage/m2.html">Milestone #2</a></p>    
+                <p class="project" style="padding-left:2em"><a href="projects/web/homepage/m3.html">Milestone #3</a></p>  
+                <p class="project" style="padding-left:2em"><a href="projects/web/homepage/m4.html">Milestone #4</a></p>  
+                <p class="project" style="padding-left:2em"><a href="projects/web/homepage/final.html">Final</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/web/resume/">Resume</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/resume/m1.html">Milestone #1</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/resume/m2.html">Milestone #2</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/resume/m3.html">Milestone #3</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/resume/css-beta.html">Milestone #4</a></p>
+                <p class="project" style="padding-left:2em"><a href="projects/web/resume/css-final.html">Final</a></p>				
+            </div>
+			
+			<div class="span5 white-box" style="height: 600px">
+                <p class="project"><a href="projects/art/">Art</a></p>             
             </div>
         </div>
 	</div>
