Added the RPG project under Games.

--- a/src/main/webapp/projects/games/rpg/index.html
+++ b/src/main/webapp/projects/games/rpg/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Code by Guy - Homepage Project</title>
-	<meta name="description" content="Guy Turner's project showcase for the 'Homepage' project." />
+	<title>Code by Guy - RPG</title>
+	<meta name="description" content="Guy Turner's project showcase page for the 'RPG' project." />
 
 	<link rel="stylesheet" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../../css/override.css">
@@ -33,8 +33,8 @@
     				</button>
     				<ul class="dropdown-menu">
       					<li><a href="../../apps/">category ( apps );</a></li>
-      					<li><a href="../../games/">category ( games );</a></li>
-						<li><a href="../index.html">category ( web );</a></li>
+      					<li><a href="../index.html">category ( games );</a></li>
+						<li><a href="../../web/">category ( web );</a></li>
                         <li><a href="../../art/">category ( art );</a></li>
     				</ul>
   			    </div>
@@ -51,23 +51,23 @@
     				</ul>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
-						<a href="../../games/">category ( games );</a>
+					<button type="button" class="btn btn-default btn-menu-active btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="../index.html">category ( games );</a>
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="../../games/rpg/">project ( rpg );</a></li>
+						<li><a href="index.html">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default btn-menu-active btn-nav dropdown-toggle" data-toggle="dropdown">
-						<a href="../index.html">category ( web );</a>
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="../../web/">category ( web );</a>
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-      					<li><a href="../biography/">project ( biography );</a></li>
-      					<li><a href="../homepage/">project ( homepage );</a></li>
-                        <li><a href="../resume/">project ( resume );</a></li>
+      					<li><a href="../../web/biography/">project ( biography );</a></li>
+      					<li><a href="../../web/homepage/">project ( homepage );</a></li>
+                        <li><a href="../../web/resume/">project ( resume );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
@@ -88,66 +88,43 @@
                   <ol class="breadcrumb">
                       <li><a href="../../../index.html">home</a></li> &raquo;
 					  <li><a href="../../index.html">projects</a></li> &raquo;
-					  <li><a href="../index.html">web</a></li> &raquo;
-                      <li class="active">homepage</li>
+					  <li><a href="../index.html">games</a></li> &raquo;
+                      <li class="active">rpg</li>
                   </ol>
               </div>
 
 		<div class="hero-unit small">
-			<h1 class="small-head">project(homepage) {</h1>
+			<h1 class="small-head">project(rpg) {</h1>
 				<div class="txt">
 					<span class="hero-txt">
-					This was a Web design project for a telecommunications course at Indiana University.
+					This was a game I developed for a telecommunications course at Indiana University.
 					<br><br>
-					The homepage to my T284 (IU course number) Web site. This page was intended to be a central portal to all of my T284 work and represent me as an individual. It was built with Twitter Bootstrap. I have since rebuilt the Web site as a general resume.
+					The goal of the project was to apply all of the game design skills I picked up over the semester. The project was very open-ended: I decided the genre, the content, etc.
+					<br><br>
+					This game uses Adobe Flash.
 					</span>
 				</div>
 			<h1 class="small-head">} </h1>
 		</div>
 
 		<div class="panel panel-default">
-			<div class="panel-heading"><h3>Milestones</h3></div>
-  			    <div class="panel-body" style="text-align: center">
-                             <div class="row">
-			 		<div class="span5 offset1 white-box">
-						<h2 class="proj-head">Milestone #1</h2>
-						<p class="project"><a href="m1.html"><img class="project-thumb" src="img/homepage-1-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Twitter Bootstrap Template</p>
-					</div>
-	   
-			 		<div class="span5 white-box">
-						<h2 class="proj-head">Milestone #2</h2>
-						<p class="project"><a href="m2.html"><img class="project-thumb" src="img/homepage-2-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Implemented Template</p>
+			<div class="panel-heading"><h3>Deliverable</h3></div>
+  			<div class="panel-body" style="text-align: center">
+				<div class="row">
+					<div class="span10 offset1 white-box">
+						<h2 class="proj-head">Click to Play</h2>
+						<p class="project"><a href="rpg-final.html" target="_blank"><img class="project-thumb" src="img/rpg-thumb.jpg" style="height: 150px"/></a></p>
+						<p class="project">Note: There is sound.</p>
 					</div>
 				</div>
-    				<div class="row">
-			 		<div class="span5 offset1 white-box">
-						<h2 class="proj-head">Milestone #3</h2>
-						<p class="project"><a href="m3.html"><img class="project-thumb" src="img/homepage-3-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">First Draft</p>
-					</div>
-	   
-			 		<div class="span5 white-box">
-						<h2 class="proj-head">Milestone #4</h2>
-						<p class="project"><a href="m4.html"><img class="project-thumb" src="img/homepage-4-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Beta</p>
-					</div>
-				</div>
-    				<div class="row">
-			 		<div class="span10 offset1 white-box">
-						<h2 class="proj-head">Final</h2>
-						<p class="project"><a href="final.html"><img class="project-thumb" src="img/homepage-5-thumb.jpg" style="height: 175px"/></a></p>
-					</div>
-				</div>
-  			</div>
+			</div>
 		</div>
 	 </div>
 
     	<div id="footer">
       		<div class="container foot">
         		<p>
-                     	<a href="../../../about.html">About Me</a> | <a href="../../../sitemap.html">Site Map</a>
+                     	<a href="#">About Me</a> | <a href="../../../sitemap.html">Site Map</a>
                      </p>
 
                      <p>
