--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -56,6 +56,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
