--- a/src/main/webapp/sitemap.html
+++ b/src/main/webapp/sitemap.html
@@ -56,6 +56,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
@@ -102,7 +103,8 @@
             </div>
                
             <div class="span5 white-box" style="height: 600px">
-                <p class="project"><a href="projects/games/">Games</a></p>            
+                <p class="project"><a href="projects/games/">Games</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/games/rpg/">RPG</a></p>
             </div>
 		</div>
 		
