Added 'Platformer' project under Games and 'Altered Reality' and 'Emotion' projects under Art.

--- a/src/main/webapp/projects/games/platformer/index.html
+++ b/src/main/webapp/projects/games/platformer/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Code by Guy - RPG</title>
-	<meta name="description" content="Guy Turner's project showcase page for the 'RPG' project." />
+	<title>Code by Guy - Platformer</title>
+	<meta name="description" content="Guy Turner's project showcase page for the 'Platformer' project." />
 
 	<link rel="stylesheet" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../../css/override.css">
@@ -56,8 +56,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="../platformer/">project ( platformer );</a></li>
-						<li><a href="index.html">project ( rpg );</a></li>
+						<li><a href="index.html">project ( platformer );</a></li>
+						<li><a href="../rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
@@ -92,18 +92,27 @@
                       <li><a href="../../../index.html">home</a></li> &raquo;
 					  <li><a href="../../index.html">projects</a></li> &raquo;
 					  <li><a href="../index.html">games</a></li> &raquo;
-                      <li class="active">rpg</li>
+                      <li class="active">platformer</li>
                   </ol>
               </div>
 
 		<div class="hero-unit small">
-			<h1 class="small-head">project(rpg) {</h1>
+			<h1 class="small-head">project(platformer) {</h1>
 				<div class="txt">
 					<span class="hero-txt">
 					This was a game I developed for a telecommunications course at Indiana University.
 					<br><br>
-					The goal of the project was to apply all of the game design skills I picked up over the semester. The project was very open-ended: I decided the genre, the content, etc.
-					<br><br>
+					The goal of this game was to adapt Gary Rosenzweig's platformer code from his book <em>ActionScript 3.0 Game Programming University</em> into a new project. In the end, I borrowed Rosenzweig's collision detection code but developed:
+					<ul>
+						<li>Arrow traps.</li>
+						<li>Ladder climbing.</li>
+						<li>Levers for doors.</li>
+						<li>Mouse-click to attack.</li>
+						<li>Stealth (crouch).</li>
+						<li>UI elements (checkboxes, popups).</li>
+						<li>...And more.</li>
+					</ul>
+					<br>
 					This game uses Adobe Flash.
 					</span>
 				</div>
@@ -116,7 +125,7 @@
 				<div class="row">
 					<div class="span10 offset1 white-box">
 						<h2 class="proj-head">Click to Play</h2>
-						<p class="project"><a href="rpg-final.html" target="_blank"><img class="project-thumb" src="img/rpg-thumb.jpg" style="height: 150px"/></a></p>
+						<p class="project"><a href="platformer-final.html" target="_blank"><img class="project-thumb" src="img/platformer-thumb.jpg" style="height: 150px"/></a></p>
 						<p class="project">Note: There is sound.</p>
 					</div>
 				</div>
