--- a/src/main/webapp/projects/index.html
+++ b/src/main/webapp/projects/index.html
@@ -56,6 +56,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="games/platformer/">project ( platformer );</a></li>
+						<li><a href="games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
@@ -75,6 +77,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="art/reality/">project ( altered_reality );</a></li>
+						<li><a href="art/emotion/">project ( emotion );</a></li>
     				</ul>
 				</div>
 			</div> <!-- Nav-Collapse -->
