--- a/src/main/webapp/projects/web/index.html
+++ b/src/main/webapp/projects/web/index.html
@@ -56,6 +56,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="../games/platformer/">project ( platformer );</a></li>
 						<li><a href="../games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
