--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -56,6 +56,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/games/platformer/">project ( platformer );</a></li>
 						<li><a href="projects/games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
@@ -76,6 +77,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/art/reality/">project ( altered_reality );</a></li>
+						<li><a href="projects/art/emotion/">project ( emotion );</a></li>
     				</ul>
 				</div>
 			</div> <!-- Nav-Collapse -->
