--- a/src/main/webapp/projects/art/reality/index.html
+++ b/src/main/webapp/projects/art/reality/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Code by Guy - RPG</title>
-	<meta name="description" content="Guy Turner's project showcase page for the 'RPG' project." />
+	<title>Code by Guy - 'Altered Reality'</title>
+	<meta name="description" content="Guy Turner's project showcase page for the 'Altered Reality' project." />
 
 	<link rel="stylesheet" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../../css/override.css">
@@ -33,9 +33,9 @@
     				</button>
     				<ul class="dropdown-menu">
       					<li><a href="../../apps/">category ( apps );</a></li>
-      					<li><a href="../index.html">category ( games );</a></li>
+      					<li><a href="../../games/">category ( games );</a></li>
 						<li><a href="../../web/">category ( web );</a></li>
-                        <li><a href="../../art/">category ( art );</a></li>
+                        <li><a href="../index.html">category ( art );</a></li>
     				</ul>
   			    </div>
 			</div>
@@ -51,13 +51,13 @@
     				</ul>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default btn-menu-active btn-nav dropdown-toggle" data-toggle="dropdown">
-						<a href="../index.html">category ( games );</a>
+					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="../../games/">category ( games );</a>
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="../platformer/">project ( platformer );</a></li>
-						<li><a href="index.html">project ( rpg );</a></li>
+						<li><a href="../../games/platformer/">project ( platformer );</a></li>
+						<li><a href="../../games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
 				<div class="btn-group">
@@ -72,13 +72,13 @@
     				</ul>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default btn-menu btn-nav dropdown-toggle" data-toggle="dropdown">
-						<a href="../../art/">category ( art );</a>
+					<button type="button" class="btn btn-default btn-menu-active btn-nav dropdown-toggle" data-toggle="dropdown">
+						<a href="../index.html">category ( art );</a>
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="../../art/reality/">project ( altered_reality );</a></li>
-						<li><a href="../../art/emotion/">project ( emotion );</a></li>
+						<li><a href="index.html">project ( altered_reality );</a></li>
+						<li><a href="../emotion/">project ( emotion );</a></li>
     				</ul>
 				</div>
 			</div> <!-- Nav-Collapse -->
@@ -91,33 +91,32 @@
                   <ol class="breadcrumb">
                       <li><a href="../../../index.html">home</a></li> &raquo;
 					  <li><a href="../../index.html">projects</a></li> &raquo;
-					  <li><a href="../index.html">games</a></li> &raquo;
-                      <li class="active">rpg</li>
+					  <li><a href="../index.html">art</a></li> &raquo;
+                      <li class="active">altered_reality</li>
                   </ol>
               </div>
 
 		<div class="hero-unit small">
-			<h1 class="small-head">project(rpg) {</h1>
+			<h1 class="small-head">project(altered_reality) {</h1>
 				<div class="txt">
 					<span class="hero-txt">
-					This was a game I developed for a telecommunications course at Indiana University.
+					This was digital art I created for a fine arts course at Indiana University.
 					<br><br>
-					The goal of the project was to apply all of the game design skills I picked up over the semester. The project was very open-ended: I decided the genre, the content, etc.
+					The goal of this project was to represent an altered version of reality.
 					<br><br>
-					This game uses Adobe Flash.
+					This project was created in Adobe Photoshop using open source images.
 					</span>
 				</div>
 			<h1 class="small-head">} </h1>
 		</div>
 
 		<div class="panel panel-default">
-			<div class="panel-heading"><h3>Deliverable</h3></div>
+			<div class="panel-heading"><h3>Final Piece</h3></div>
   			<div class="panel-body" style="text-align: center">
 				<div class="row">
 					<div class="span10 offset1 white-box">
-						<h2 class="proj-head">Click to Play</h2>
-						<p class="project"><a href="rpg-final.html" target="_blank"><img class="project-thumb" src="img/rpg-thumb.jpg" style="height: 150px"/></a></p>
-						<p class="project">Note: There is sound.</p>
+						<h2 class="proj-head">Click to View Original Size</h2>
+						<p class="project"><a href="reality-final.html" target="_blank"><img class="project-thumb" src="img/reality-thumb.jpg" style="width: 300px"/></a></p>
 					</div>
 				</div>
 			</div>
