--- a/src/main/webapp/sitemap.html
+++ b/src/main/webapp/sitemap.html
@@ -56,6 +56,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/games/platformer/">project ( platformer );</a></li>
 						<li><a href="projects/games/rpg/">project ( rpg );</a></li>
     				</ul>
 				</div>
@@ -76,6 +77,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="projects/art/reality/">project ( altered_reality );</a></li>
+						<li><a href="projects/art/emotion/">project ( emotion );</a></li>
     				</ul>
 				</div>
 			</div> <!-- Nav-Collapse -->
@@ -104,7 +107,10 @@
                
             <div class="span5 white-box" style="height: 600px">
                 <p class="project"><a href="projects/games/">Games</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/games/platformer/">Platformer</a></p>
+				<p class="project" style="padding-left:2em"><a href="projects/games/platformer/platformer-final.html">Final</a></p>
 				<p class="project" style="padding-left:1em"><a href="projects/games/rpg/">RPG</a></p>
+				<p class="project" style="padding-left:2em"><a href="projects/games/rpg/rpg-final.html">Final</a></p>
             </div>
 		</div>
 		
@@ -130,7 +136,11 @@
             </div>
 			
 			<div class="span5 white-box" style="height: 600px">
-                <p class="project"><a href="projects/art/">Art</a></p>             
+                <p class="project"><a href="projects/art/">Art</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/art/reality/">Altered Reality</a></p>
+				<p class="project" style="padding-left:2em"><a href="projects/art/reality/reality-final.html">Final</a></p>
+				<p class="project" style="padding-left:1em"><a href="projects/art/emotion/">Emotion</a></p>
+				<p class="project" style="padding-left:2em"><a href="projects/art/emotion/emotion-final.html">Final</a></p>
             </div>
         </div>
 	</div>
