--- a/src/main/webapp/projects/web/biography/index.html
+++ b/src/main/webapp/projects/web/biography/index.html
@@ -77,6 +77,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
+						<li><a href="../../art/reality/">project ( altered_reality );</a></li>
+						<li><a href="../../art/emotion/">project ( emotion );</a></li>
     				</ul>
 				</div>
 			</div> <!-- Nav-Collapse -->
