Changed featured projects on the home page.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,19 +102,19 @@
 		</div>
 
 		<div class="panel panel-default">
-			<div class="panel-heading"><h3>Selected Projects</h3></div>
+			<div class="panel-heading"><h3>Featured Projects</h3></div>
   			<div class="panel-body">
     			<div class="row">
 			 		<div class="span5 offset1 white-box">
-						<h2 class="proj-head">// two_resumes</h2>
-						<p class="project">A stylized resume designed to represent me as an individual. This project was inspired by my interest in programming languages. The resume as a whole imitates a text editor and each page is written in the style of a specific programming language.</p>
-						<a class="btn proj-btn btn-menu" href="projects/web/resume/css-final.html">view ( project ) &raquo;</a>
+						<h2 class="proj-head">// rpg</h2>
+						<p class="project">A role-playing game developed in Adobe Flash. This may be the largest solo project I've completed - there are several thousands of lines of code; multiple animated sprites; and many environments.</p>
+						<a class="btn proj-btn btn-menu" href="projects/games/rpg/">view ( project ) &raquo;</a>
 					</div>
 	   
 			 		<div class="span5 white-box">
-						<h2 class="proj-head">// visual_biography</h2>
-						<p class="project">A biography designed to portray the life of Red Hot Chili Peppers frontman Anthony Kiedis visually. The page represents a hypothetical top-down view of the singer's own desk.</p>
-						<a class="btn proj-btn btn-menu" href="projects/web/biography/final.html">view ( project ) &raquo;</a>
+						<h2 class="proj-head">// altered_reality</h2>
+						<p class="project">A digital art piece created in Adobe Photoshop. This project taught me a lot about the Photoshop software and the design process.</p>
+						<a class="btn proj-btn btn-menu" href="projects/art/reality/">view ( project ) &raquo;</a>
 			 			</p>
 					</div>
 	   
