--- a/src/main/webapp/projects/games/rpg/index.html
+++ b/src/main/webapp/projects/games/rpg/index.html
@@ -127,7 +127,7 @@
     	<div id="footer">
       		<div class="container foot">
         		<p>
-                     	<a href="#">About Me</a> | <a href="../../../sitemap.html">Site Map</a>
+                     	<a href="../../../about.html">About Me</a> | <a href="../../../sitemap.html">Site Map</a>
                      </p>
 
                      <p>
